# EditDistance

./: .gitignore  README.md
Benchmarks/: minmultiply.py  minmultiply_total.py  parameter-test.py
Benchmarks/combined/: plotter.py
Benchmarks/combined/dna/: plotter.py
Benchmarks/combined/fib/: plotter.py
Benchmarks/compression/: plotter.py
Benchmarks/distance-mult/: max-mult-plot.py  min-mult-plot.py
EditDistance/: CMakeLists.txt  main.cpp
EditDistance/benchmark/: benchmarker.hpp  utils.hpp
EditDistance/compression/: DIST.hpp  SLP.hpp  maxmultiply.hpp  slpalign.hpp
EditDistance/simple/: simple.hpp
EditDistance/test/: tests.hpp
EditDistance/utils/: allocator.hpp  math.hpp  matrix.hpp  unionfind.hpp
Report/: refs.bib  thesis.dvi  thesis.ps  thesis.tex
